The elements are now properly shown, including name.